# chat_analyser

./: Cargo.toml
src/: config.rs  main.rs  parse_twitch_data.rs  socket.rs  structs_enums.rs
src/ui/: irc_messages.rs  main_ui.rs  mod.rs
