[package]
name = "chat_analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["fs", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "^0.1.8", features = ["sync"] }

anyhow = "1.0.65"
chrono = "^0.4.19"
egui = "0.19.0"
env_logger = "^0.9.0"
eframe = "0.19.0"
futures-util = "^0.3.21"
tokio-native-tls = "^0.3.0"

[profile.release]
lto = 'thin'
codegen-units = 1
opt-level = 3
panic = 'abort'
incremental = true

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
#panic = 'abort'