[package]
name = "chat_analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "^0.5.2", features = ["debug", "tokio"] }
log = { version = "^0.4.14", features = ["max_level_trace", "release_max_level_trace"] }
tokio = { version = "^1", features = ["fs", "net", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-stream = { version = "^0.1.8", features = ["sync"] }

anyhow = "1.0.65"
chrono = "^0.4.19"
dashmap = "5.4.0"
env_logger = "0.10.0"
flume = "0.10.14"
futures-util = "^0.3.21"
once_cell = "^1.9.0"
serde = "^1.0.125"
serde_derive = "^1.0.125"
serde_json = "^1.0.68"
tokio-native-tls = "^0.3.0"
whoami = "1.2.1"

[profile.release]
lto = 'thin'
codegen-units = 1
opt-level = 3
panic = 'abort'
incremental = true

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
#panic = 'abort'